se sube ejercicio del dia 11 de abril del 2025 de los productos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <li><hr class="dropdown-divider"></li>
 
-    <li><a class="dropdown-item" onclick="getCategories(``);" href="#">all category</a></li>
+    <li><a class="dropdown-item" onclick="getData(``);" href="#">all category</a></li>
     </ul>
 </div><!-- btnGroup -->
 
